--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
+# Project properties
 spring.application.name=retro-board-api
 springdoc.swagger-ui.oauth.app-name="Retro Board API"
+
+# Custom variables
+api-version=1.0.0
