--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-# Project properties
-spring.application.name=retro-board-api
-springdoc.swagger-ui.oauth.app-name="Retro Board API"
-
 # Custom variables
 api-version=1.0.0
+
+# Database
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database=mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/retro-board
+spring.datasource.username=root
+spring.datasource.password=password
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
